Added second recipe page to the project
Incorporated the second recipe page onto the index.html.
Minor grammatical fixes in the footer section, of the lasagna html file.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -76,7 +76,7 @@
 </body>
 <br><br><br>
 <footer>
-    <h3>Sources:</h3>
+    <h3>Source(s):</h3>
     <a href="https://www.allrecipes.com/recipe/19344/homemade-lasagna/">Lasagna Steps</a>
     <a href="https://www.simplyrecipes.com/recipes/lasagna/">Lasagna Ingredients</a>
 </footer>
