--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/chicken-parmesan.html">Chicken Parmesan</a></li>
+        <li><a href="recipes/sesame-chicken.html">Sesame Chicken</a></li>
     </ul>
 </body>
 
