Update the img folder name and recipes img links
Modified the images containing folder name to just "images" from
"recipe-images". Easier to navigate the file structure on a PC,
via the command line.

Associated links in the recipe html files were updated accordingly;
Now direct pages, towards the properly renamed, image folder.

--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Chicken Parmesan Recipe</h1>
-    <img src="recipe-images/chicken-parmesan.jpg" alt="A delicious image of Chicken Parmesan">
+    <img src="images/chicken-parmesan.jpg" alt="A delicious image of Chicken Parmesan">
     <h2>Description:</h2>
     <h3>How to Make Chicken Parmesan That's Never Soggy</h3>
     <p>
