--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,8 +8,7 @@
 
 <body>
     <h1>Lasagna Recipe</h1>
-    <img src="recipe-images/lasagna.jpg"
-        alt="This is an image of a beautiful and tasty, lasagna; You can almost taste it.">
+    <img src="images/lasagna.jpg" alt="This is an image of a beautiful and tasty, lasagna; You can almost taste it.">
     <h2>Description:</h2>
     <p>
         One of the best recipes you'll find out there, on the internet, on how to make the ultimate lasagna.
