--- a/recipes/sesame-chicken.html
+++ b/recipes/sesame-chicken.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Sesame Chicken Recipe</h1>
-    <img src="recipe-images/sesame-chicken.jpg" alt="Wholesomely made sesame chicken, on a white rice bowl. Delicious!">
+    <img src="images/sesame-chicken.jpg" alt="Wholesomely made sesame chicken, on a white rice bowl. Delicious!">
     <h2>Description:</h2>
     <p>
         Looking for the best sesame chicken recipe? This is it! You may want to increase the vinegar or lower the amount
